--- a/index.html
+++ b/index.html
@@ -1,56 +1,41 @@
 <!DOCTYPE html>
-<div id="container"></div>
+
+<div id="safety_stackedbarchart"></div>
+
+
 <script src="d3.v7.js"></script>
+
+<!-- safety_stackedbarchart -->
 <script type="module">
-  // Declare the chart dimensions and margins.
-  const width = 640;
-  const height = 400;
-  const marginTop = 20;
-  const marginRight = 20;
-  const marginBottom = 30;
-  const marginLeft = 40;
 
-  // Declare the x (horizontal position) scale.
-  const x = d3
-    .scaleUtc()
-    .domain([new Date("2023-01-01"), new Date("2024-01-01")])
-    .range([marginLeft, width - marginRight]);
+  // set the dimensions and margins of the graph
+  var margin = {top: 10, right: 30, bottom: 20, left: 50},
+      width = 460 - margin.left - margin.right,
+      height = 400 - margin.top - margin.bottom;
 
-  // Declare the y (vertical position) scale.
-  const y = d3
-    .scaleLinear()
-    .domain([0, 100])
-    .range([height - marginBottom, marginTop]);
-
-  // Create the SVG container.
-  const svg = d3.create("svg").attr("width", width).attr("height", height);
-
-  // Add the x-axis.
-  svg
+  // append the svg object to the body of the page
+  var svg = d3.select("#safety_stackedbarchart")
+    .append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
     .append("g")
-    .attr("transform", `translate(0,${height - marginBottom})`)
-    .call(d3.axisBottom(x));
+      .attr("transform",
+            "translate(" + margin.left + "," + margin.top + ")");
 
-  // Add the y-axis.
-  svg
-    .append("g")
-    .attr("transform", `translate(${marginLeft},0)`)
-    .call(d3.axisLeft(y));
+  // Load data from data/safety_cars_with_race_ids.csv
+  var data = d3.csv('https://raw.githubusercontent.com/alexmanoo/interesting-f1/main/data/races.csv', function(data) {
+    console.log(data)
+  })
 
-  // Append the SVG element.
-  container.append(svg.node());
+  // console.log(typeof(data))
+
+  // Print data
+  // data.then(function(data) {
+  //   console.log(data)
+  // })
+
 </script>
+  
+  
 
-<script type="module">
-  import {
-    forceSimulation,
-    forceCollide,
-    forceX,
-  } from "https://cdn.jsdelivr.net/npm/d3-force@3/+esm";
-
-  const nodes = [{}, {}];
-  const simulation = forceSimulation(nodes)
-    .force("x", forceX())
-    .force("collide", forceCollide(5))
-    .on("tick", () => console.log(nodes[0].x));
 </script>
