Stacked barchart for SC and RF

--- a/index.html
+++ b/index.html
@@ -5,37 +5,4 @@
 
 <script src="d3.v7.js"></script>
 
-<!-- safety_stackedbarchart -->
-<script type="module">
-
-  // set the dimensions and margins of the graph
-  var margin = {top: 10, right: 30, bottom: 20, left: 50},
-      width = 460 - margin.left - margin.right,
-      height = 400 - margin.top - margin.bottom;
-
-  // append the svg object to the body of the page
-  var svg = d3.select("#safety_stackedbarchart")
-    .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
-    .append("g")
-      .attr("transform",
-            "translate(" + margin.left + "," + margin.top + ")");
-
-  // Load data from data/safety_cars_with_race_ids.csv
-  var data = d3.csv('https://raw.githubusercontent.com/alexmanoo/interesting-f1/main/data/races.csv', function(data) {
-    console.log(data)
-  })
-
-  // console.log(typeof(data))
-
-  // Print data
-  // data.then(function(data) {
-  //   console.log(data)
-  // })
-
-</script>
-  
-  
-
-</script>
+<script src="js/script.js"></script>
