Add field spread chart and separate graphs in files

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
+<body>
 
-<div id="safety_stackedbarchart"></div>
+    <div id="safety_stackedbarchart"></div>
+    <div id="time_diffs"></div>
 
 
-<script src="d3.v7.js"></script>
+    <script src="d3.v7.js"></script>
 
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/safety.js"></script>
+    <script src="js/field-spread.js"></script>
+
+</body>
