Connect slider to safety chart

--- a/index.html
+++ b/index.html
@@ -2,35 +2,22 @@
 
 <head>
   <meta charset="utf-8" />
-  
 
-  <script src="d3.v7.js"></script>
   <!-- Dependencies -->
-  <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+  <script src="d3.v7.js"></script>
   <script src="js/slider.js"></script>
-    <script src="js/script.js"></script>
-  <script src="js/safety.js"></script>
-  <script src="js/field-spread.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/safety-2.js"></script>
+  <script src="js/field-spread-2.js"></script>
+  
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="style.css" />
-  <style type="text/css">
-    #slider-container {
-      position: relative;
-      height: 30px;
-      background-color: #eeeef5;
-    }
-  </style>
-
 </head>
 
 <body>
   <div id="slider-container"></div>
-
-  <script type="text/javascript">
-    var slider = createD3RangeSlider(0, 100, "#slider-container");
- </script>
+  <div id="range-label"></div>
   <div id="safety_stackedbarchart"></div>
   <div id="time_diffs"></div>
-
-
-
+  
 </body>
