Add 3 buttons to line chart

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <div id="slider-container"></div>
   <div id="range-label"></div>
   <div id="safety_stackedbarchart"></div>
+  <button id="btn-p1-p2">P1 - P2</button>
+<button id="btn-p2-p3">P2 - P3</button>
+<button id="btn-p1-last">P1 - Last</button>
   <div id="time_diffs"></div>
   
 </body>
