--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <body>
     <div id="slider-container"></div>
     <div id="range-label"></div>
-    <!-- <div id="safety_stackedbarchart"></div>
+    <div id="safety_stackedbarchart"></div>
     <button id="btn-p1-p2">P1 - P2</button>
     <button id="btn-p2-p3">P2 - P3</button>
     <button id="btn-p1-last">P1 - Last</button>
-    <div id="time_diffs"></div> -->
+    <div id="time_diffs"></div>
     <div id="overtakes">
         <div id="tooltip" style="position: absolute; opacity: 0"></div>
     </div>
