--- a/index_jesper.html
+++ b/index_jesper.html
@@ -16,6 +16,8 @@
 
     .grandparent text {
         font-weight: bold;
+        font-family: "sans-serif";
+        font-size: 20px;
     }
 
     rect {
@@ -64,8 +66,8 @@
     .legend text {
         text-anchor: middle;
         pointer-events: auto;
-        font-size: 13px;
-        font-family: sans-serif;
+        font-size: 15px;
+        font-family: "sans-serif";
         fill: black;
     }
 
@@ -74,9 +76,9 @@
     }
 
     .textdiv {
-        font-family: "Open Sans", Helvetica, Arial, sans-serif;
+        font-family: "sans-serif";
         font-size: 14px;
-        padding: 7px;
+        padding: 6px;
         cursor: pointer;
         overflow: none;
     }
@@ -84,24 +86,19 @@
     .textdiv .title {
         font-size: 102%;
         font-weight: bold;
-        margin-top: 8px;
-        font-size: 11px !important;
+        margin-top: 4px;
+        font-size: 16px;
     }
 
     .textdiv p {
         line-height: 13px;
-        margin: 0 0 4px !important;
+        margin: 0 0 4px;
         padding: 0px;
-        font-size: 10px !important;
+        font-size: 15px;
     }
 </style>
 
 <p id="chart"></p>
-
-<div class="col-md-23 legend" style="margin-top: -10px; margin-bottom: 0px">
-    <strong>Title Legend</strong>
-    <div id="legend"></div>
-</div>
 
 <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 
@@ -110,8 +107,8 @@
     var obj = document.getElementById("chart");
     var divWidth = obj.offsetWidth;
 
-    var margin = { top: 30, right: 0, bottom: 20, left: 0 },
-        width = divWidth - 25,
+    var margin = { top: 40, right: 0, bottom: 20, left: 0 },
+        width = divWidth/2 - 25,
         height = 540 - margin.top - margin.bottom,
         formatNumber = d3.format(",%"),
         colorDomain = [-0.1, 0, 0.1],
@@ -257,185 +254,182 @@
             : "white";
     }
 
-    d3.json("budget-data.json", function (root) {
+
+    var myColors = ["#4169b0","#0080c4","#0092d6","#009ee3"]
+    d3.csv("data/finish_status_with_ids.csv", function (error, data) {
+        if (error) throw error;
         var root = {
             name: "total_finishes",
             rate: 0,
             children: [
                 {
                     name: "Finished",
-                    rate: 0,
+                    rate: 1,
                     value: 0,
                 },
                 {
-                    name: "dnf",
-                    rate: 0,
+                    name: "Did-Not-Finish",
+                    rate: 1,
                     children: [
                         {
                             name: "Disqualifications",
-                            rate: 0,
-                            children: [
-                                {
-                                    name: "Disqualified",
-                                    rate: 0,
-                                    value: 0,
-                                },
-                            ],
+                            rate: 2,
+                            value: 0,
                         },
                         {
                             name: "Accidents",
-                            rate: 0,
+                            rate: 2,
                             children: [
                                 {
                                     name: "Accident",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Collision",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Spun off",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                             ],
                         },
                         {
                             name: "Technical Issues",
-                            rate: 0,
+                            rate: 2,
                             children: [
                                 {
                                     name: "Engine",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Gearbox",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Transmission",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Clutch",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Hydraulics",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Electrical",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Radiator",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Suspension",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Brakes",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Differential",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Overheating",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Mechanical",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Tyre",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Driver Seat",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Puncture",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "Driveshaft",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                             ],
                         },
                         {
                             name: "Laps Completed",
-                            rate: 0,
+                            rate: 2,
                             children: [
                                 {
                                     name: "+1 Lap",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+2 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+3 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+4 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+5 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+6 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+7 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+8 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                                 {
                                     name: "+9 Laps",
-                                    rate: 0,
+                                    rate: 3,
                                     value: 0,
                                 },
                             ],
@@ -445,67 +439,62 @@
             ],
         };
 
-        d3.csv("data/finish_status copy.csv", function(error, data) {
-            if (error) throw error;
+        data.forEach(function (d) {
+            root.children[0].value += +d.Finished;
+            root.children[1].children[0].value += +d.Disqualified;
+            root.children[1].children[1].children[0].value += +d.Accident;
+            root.children[1].children[1].children[1].value += +d.Collision;
+            root.children[1].children[1].children[2].value += +d.Spunoff;
+            root.children[1].children[2].children[0].value += +d.Engine;
+            root.children[1].children[2].children[1].value += +d.Gearbox;
+            root.children[1].children[2].children[2].value += +d.Transmission;
+            root.children[1].children[2].children[3].value += +d.Clutch;
+            root.children[1].children[2].children[4].value += +d.Hydraulics;
+            root.children[1].children[2].children[5].value += +d.Electrical;
+            root.children[1].children[2].children[6].value += +d.Radiator;
+            root.children[1].children[2].children[7].value += +d.Suspension;
+            root.children[1].children[2].children[8].value += +d.Brakes;
+            root.children[1].children[2].children[9].value += +d.Differential;
+            root.children[1].children[2].children[10].value += +d.Overheating;
+            root.children[1].children[2].children[11].value += +d.Mechanical;
+            root.children[1].children[2].children[12].value += +d.Tyre;
+            root.children[1].children[2].children[13].value += +d.DriverSeat;
+            root.children[1].children[2].children[14].value += +d.Puncture;
+            root.children[1].children[2].children[15].value += +d.Driveshaft;
 
-            data.forEach(function (d) {
-                root.children[0].value += +d.Finished;
-                root.children[1].children[0].children[0].value += +d.Disqualified;
-                root.children[1].children[1].children[0].value += +d.Accident;
-                root.children[1].children[1].children[1].value += +d.Collision;
-                root.children[1].children[2].children[0].value += +d.Engine;
-                root.children[1].children[2].children[1].value += +d.Gearbox;
-                root.children[1].children[2].children[2].value += +d.Transmission;
-                root.children[1].children[2].children[3].value += +d.Clutch;
-                root.children[1].children[2].children[4].value += +d.Hydraulics;
-                root.children[1].children[2].children[5].value += +d.Electrical;
-                root.children[1].children[2].children[6].value += +d.Radiator;
-                root.children[1].children[2].children[7].value += +d.Suspension;
-                root.children[1].children[2].children[8].value += +d.Brakes;
-                root.children[1].children[2].children[9].value += +d.Differential;
-                root.children[1].children[2].children[10].value += +d.Overheating;
-                root.children[1].children[2].children[11].value += +d.Mechanical;
-                root.children[1].children[2].children[12].value += +d.Tyre;
-                root.children[1].children[2].children[13].value += +d.DriverSeat;
-                root.children[1].children[2].children[14].value += +d.Puncture;
-                root.children[1].children[2].children[15].value += +d.Driveshaft;
-
-                root.children[1].children[3].children[0].value += +d.Lap1;
-                root.children[1].children[3].children[1].value += +d.Laps2;
-                root.children[1].children[3].children[2].value += +d.Laps3;
-                root.children[1].children[3].children[3].value += +d.Laps4;
-                root.children[1].children[3].children[4].value += +d.Laps5;
-                root.children[1].children[3].children[5].value += +d.Laps6;
-                root.children[1].children[3].children[6].value += +d.Laps7;
-                root.children[1].children[3].children[7].value += +d.Laps8;
-                root.children[1].children[3].children[8].value += +d.Laps9;
-                // Continue updating other properties similarly
-                // root.children[1].children[3].children[9].value += +d.SomeOtherProperty;
-            });
-
+            root.children[1].children[3].children[0].value += +d.Lap1;
+            root.children[1].children[3].children[1].value += +d.Laps2;
+            root.children[1].children[3].children[2].value += +d.Laps3;
+            root.children[1].children[3].children[3].value += +d.Laps4;
+            root.children[1].children[3].children[4].value += +d.Laps5;
+            root.children[1].children[3].children[5].value += +d.Laps6;
+            root.children[1].children[3].children[6].value += +d.Laps7;
+            root.children[1].children[3].children[7].value += +d.Laps8;
+            root.children[1].children[3].children[8].value += +d.Laps9;
+            // Continue updating other properties similarly
+            // root.children[1].children[3].children[9].value += +d.SomeOtherProperty;
+        });
         
-
-        debugger;
         console.log(root);
         initialize(root);
         accumulate(root);
         layout(root);
         display(root);
-
+        
         function display(d) {
             grandparent
                 .datum(d.parent)
                 .on("click", transition)
                 .select("text")
-                .text(name(d));
+                .text(name(d))
+                .style("font-family", "sans-serif");
 
             // color header based on grandparent's rate
             grandparent
                 .datum(d.parent)
                 .select("rect")
-                .attr("fill", function () {
-                    console.log(color(d.rate));
-                    return color(d["rate"]);
+                .attr("fill", function() {
+                    return myColors[d.rate];
                 });
 
             var g1 = svg
@@ -536,12 +525,12 @@
             g.append("foreignObject")
                 .call(rect)
                 /* open new window based on the json's URL value for leaf nodes */
-                /* Firefox displays this on top 
-				.on("click", function(d) { 
-					if(!d.children){
-						window.open(d.url); 
-				}
-			})*/
+                /* Firefox displays this on top
+    	.on("click", function(d) {
+    		if(!d.children){
+    			window.open(d.url);
+    	}
+    })*/
                 .attr("class", "foreignobj")
                 .append("xhtml:div")
                 .attr("dy", ".75em")
@@ -551,11 +540,8 @@
                         ' <p class="title"> ' +
                         d.name +
                         "</p>" +
-                        " <p> En 2014 : " +
-                        d3.round(d.value, 2) +
-                        " Million(s) euros </p>" +
-                        " <p> 2013/2014 : " +
-                        formatNumber(d.rate)
+                        " <p> Count: " +
+                        d3.round(d.value, 2)
                     );
                 })
                 .attr("class", "textdiv"); //textdiv class allows us to style the text easily with CSS
@@ -616,7 +602,6 @@
                 return y(d.y) + 6;
             });
         }
-
         function rect(rect) {
             rect.attr("x", function (d) {
                 return x(d.x);
@@ -631,8 +616,8 @@
                     return y(d.y + d.dy) - y(d.y);
                 })
                 .attr("fill", function (d) {
-                    return color(parseFloat(d.rate));
-                });
+                    return myColors[d.rate];
+                }); // Hardcoded color value, e.g., "blue"
         }
 
         function foreign(foreign) {
@@ -653,22 +638,14 @@
 
         function name(d) {
             return d.parent
-                ? "Budget du Département" +
-                      " - " +
-                      d.name +
-                      " -  Cliquez ici pour dézoomer"
-                : "Budget du Département - Cliquez pour zoomer";
+                ? d.name + " Status  " + "  - Click Here To Zoom Out"
+                : "Total Finish Status - Click And Expand A Category";
         }
 
         function nameSave(d) {
             return d.parent
-                ? name(d.parent) +
-                      " - " +
-                      d.name +
-                      " -  Cliquez ici pour dézoomer"
+                ? name(d.parent) + " - " + d.name + " -  Click Here To Zoom Out"
                 : d.name;
         }
-
-    });
     });
 </script>
