--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="utf-8" />
 
+    <meta http-equiv="Content-Type" content="text/html; charset=#CHARSET" />
     <!-- Dependencies -->
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script>
+        d3v3 = d3;
+        window.d3 = null;
+    </script>
     <script src="d3.v7.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/script.js"></script>
@@ -12,6 +19,7 @@
     <script src="js/overtakes.js"></script>
     <script src="js/pitstops.js"></script>
     <script src="js/tire_types.js"></script>
+    <script src="js/dnf.js"></script>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css" />
@@ -38,5 +46,98 @@
             preserveAspectRatio="xMinYMin meet"
             viewBox="0 0 200 200"
         ></svg>
+    </div>
+
+    <div id="dnf">
+        <style>
+            #chart {
+                max-width: 100%;
+                overflow: auto;
+            }
+
+            text {
+                pointer-events: none;
+            }
+
+            .grandparent text {
+                font-weight: bold;
+                font-family: "sans-serif";
+                font-size: 20px;
+            }
+
+            rect {
+                stroke: #fff;
+                stroke-width: 1px;
+            }
+
+            rect.parent,
+            .grandparent rect {
+                stroke-width: 2px;
+            }
+
+            .grandparent:hover rect {
+                fill: darkgrey;
+            }
+
+            .children rect.parent,
+            .grandparent rect {
+                cursor: pointer;
+            }
+
+            .children rect.child {
+                opacity: 0;
+            }
+
+            .children:hover rect.child {
+                opacity: 1;
+                stroke-width: 1px;
+            }
+
+            .children:hover rect.parent {
+                opacity: 0;
+            }
+
+            .legend {
+                margin-bottom: 8px !important;
+            }
+
+            .legend rect {
+                stroke-width: 0px;
+            }
+
+            .legend text {
+                text-anchor: middle;
+                pointer-events: auto;
+                font-size: 15px;
+                font-family: "sans-serif";
+                fill: black;
+            }
+
+            .form-group {
+                text-align: left;
+            }
+
+            .textdiv {
+                font-family: "sans-serif";
+                font-size: 14px;
+                padding: 6px;
+                cursor: pointer;
+                overflow: none;
+            }
+
+            .textdiv .title {
+                font-size: 102%;
+                font-weight: bold;
+                margin-top: 4px;
+                font-size: 16px;
+            }
+
+            .textdiv p {
+                line-height: 13px;
+                margin: 0 0 4px;
+                padding: 0px;
+                font-size: 15px;
+            }
+        </style>
     </div>
 </body>
