--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/overtakes.js"></script>
     <script src="js/pitstops.js"></script>
     <script src="js/tire_types.js"></script>
+    <script src="js/track-location.js"></script>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css" />
@@ -20,6 +21,7 @@
 <body>
     <div id="slider-container"></div>
     <div id="range-label"></div>
+    <div id="track_location"></div>
     <div id="safety_stackedbarchart"></div>
     <button id="btn-p1-p2">P1 - P2</button>
     <button id="btn-p2-p3">P2 - P3</button>
