--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
     <div id="slider-container"></div>
     <div id="range-label"></div>
+    <div id="current-races-count">Number of races in your selection: 0</div>
     <div id="track_location"></div>
     <div id="safety_stackedbarchart"></div>
     <button id="btn-p1-p2">P1 - P2</button>
