added transitions, legend and centered

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
             </div>
         </div>
         <div class="grid-item" style="background-color: green">
-            <div id="tire-types"></div>
+            <div id="pie-chart">
+                <div id="tire-types"></div>
+                <div id="pie-legend"></div>
+            </div>
         </div>
         <div class="grid-item" style="background-color: green">
             <div id="winner-champ-pos"></div>
