Put slider in a sticky header

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 </head>
 
 <body>
-    <div id="slider-container"></div>
-    <div id="range-label"></div>
-    <div id="current-races-count">
-        Number of races in your selection: . Races are between:
+    <div id="sticky-header">
+        <div id="slider-container"></div>
+        <div id="range-label"></div>
+        <div id="current-races-count">
+            Number of races in your selection: . Races are between:
+        </div>
     </div>
-
     <style>
         .grid-container {
             display: grid;
